--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eslint-plugin-compat": "^2.5.1",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-promise": "^4.0.1",
+    "lint-staged": "^7.2.2",
+    "prettier": "^1.14.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router": "^4.3.1",
@@ -19,7 +21,19 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "cross-env NODE_ENV=development eslint --cache --format=node_modules/eslint-formatter-pretty ."
+    "lint": "cross-env NODE_ENV=development eslint --cache --format=node_modules/eslint-formatter-pretty .",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.(js|jsx)": [
+      "cross-env NODE_ENV=development eslint --cache --format=node_modules/eslint-formatter-pretty",
+      "prettier --ignore-path .eslintignore --single-quote --write",
+      "git add"
+    ],
+    "*.(json|css|scss|md)|.(babelrc|prettierrc|eslintrc)": [
+      "prettier --ignore-path .eslintignore --write",
+      "git add"
+    ]
   },
   "devDependencies": {
     "eslint": "^5.5.0",
