--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "lint-staged": {
     "*.(js|jsx)": [
-      "cross-env NODE_ENV=development eslint --cache --format=node_modules/eslint-formatter-pretty",
+      "cross-env NODE_ENV=development eslint --color --cache --format=node_modules/eslint-formatter-pretty",
       "prettier --ignore-path .eslintignore --single-quote --write",
       "git add"
     ]
