--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
       "cross-env NODE_ENV=development eslint --color --cache --format=node_modules/eslint-formatter-pretty",
       "prettier --ignore-path .eslintignore --single-quote --write",
       "git add"
+    ],
+    "*.(json|css|scss|md)|.(babelrc|prettierrc|eslintrc)": [
+      "prettier --ignore-path .eslintignore --write",
+      "git add"
     ]
   },
   "devDependencies": {
